--- a/pom.xml
+++ b/pom.xml
@@ -302,8 +302,8 @@
 	    </repository>
 	    <snapshotRepository>
 	        <id>nexus</id>
-	        <name>nexus</name>
-	        <url>http://13.232.112.165:8081/repository/test-proxy-repo/</url>
+	        <name>test-proxy-repo</name>
+	        <url>http://43.205.117.84:8081/repository/test-proxy-repo/</url>
 	    </snapshotRepository>
     </distributionManagement>
     <!-- Maven plugin versions are mentioned in order to guarantee the build reproducibility in the long term -->
