--- a/pom.xml
+++ b/pom.xml
@@ -302,10 +302,15 @@
 	    </repository>
 	    <snapshotRepository>
 	        <id>nexus</id>
-	        <name>test-proxy-repo</name>
-	        <url>http://43.205.117.84:8081/repository/test-proxy-repo/</url>
+	        <name>Test-repo</name>
+	        <url>http://43.205.117.84:8081/repository/Test-repo/</url>
 	    </snapshotRepository>
     </distributionManagement>
+	</repository>
+	     <id>nexus</id>
+	     <name>Credence-proxy-repo</name>
+	     <url>http://43.205.117.84:8081/repository/Credence-proxy-repo/</url>
+	</repository>
     <!-- Maven plugin versions are mentioned in order to guarantee the build reproducibility in the long term -->
     <build>
         <defaultGoal>install</defaultGoal>
